<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_white"
    android:orientation="vertical">

    <one.mixin.android.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:need_divider="false"
        app:titleText="@string/Transactions"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <include android:id="@+id/empty" layout="@layout/layout_empty_transaction" />
</LinearLayout>