<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/transactions_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/All_Transactions"
        android:textColor="?attr/text_primary" />


    <TextView
        android:id="@+id/hide"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/Hidden_Assets"
        android:textColor="?attr/text_primary" />

    <TextView
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/bg_white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/rename_wallet"
        android:textColor="?attr/text_primary" />

</LinearLayout>