<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_white"
    android:orientation="vertical">

    <one.mixin.android.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:need_divider="false"
        app:titleText="@string/withdrawal_addr_new" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bg_window"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/bg_white"
            android:baselineAligned="false"
            android:orientation="vertical">

            <one.mixin.android.widget.BadgeCircleImageView
                android:id="@+id/avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin16" />

            <TextView
                android:id="@+id/to_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/text_primary" />

            <RelativeLayout
                android:id="@+id/label_rl"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:background="@drawable/bg_round_8_solid_gray"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/label_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:hint="@string/withdrawal_label"
                    android:inputType="text"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="8dp"
                    android:maxLength="64"
                    android:textColor="?attr/text_primary"
                    android:textColorHint="?attr/text_assist"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/addr_rl"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/margin20"
                android:background="@drawable/bg_round_8_solid_gray"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/addr_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_toStartOf="@id/addr_iv"
                    android:background="@null"
                    android:hint="@string/Address"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="8dp"
                    android:textColor="?attr/text_primary"
                    android:textColorHint="?attr/text_assist"
                    android:textSize="16sp"
                    tools:ignore="Autofill,TextFields" />

                <ImageView
                    android:id="@+id/addr_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_addr_qr" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tag_rl"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/margin20"
                android:background="@drawable/bg_round_8_solid_gray"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tag_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_toStartOf="@id/tag_iv"
                    android:background="@null"
                    android:hint="@string/withdrawal_memo"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="8dp"
                    android:textColor="?attr/text_primary"
                    android:textColorHint="?attr/text_assist"
                    android:textSize="16sp"
                    tools:ignore="Autofill,TextFields" />

                <ImageView
                    android:id="@+id/tag_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_addr_qr" />
            </RelativeLayout>

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:textColor="?attr/text_primary" />

            <TextView
                android:id="@+id/tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="@dimen/margin16"
                android:lineSpacingExtra="2dp"
                android:textColor="?attr/text_primary"
                android:textSize="12sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/save_tv"
                style="@style/AppTheme.MaterialButton"
                android:layout_width="116dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginBottom="20dp"
                android:enabled="false"
                android:text="@string/Save"
                android:textColor="?attr/text_assist"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>