<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send_tv"/>
    
</RelativeLayout>