<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <one.mixin.android.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/bg_white"
        android:drawablePadding="8dp"
        android:hint="@string/setting_auth_search_hint"
        android:maxLines="1"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:textColor="?attr/text_primary"
        android:textColorHint="?attr/text_assist"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_search"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="?attr/bg_window"
        android:paddingBottom="-1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>