...
        android:background="@drawable/bg_upper_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/left_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:background="@drawable/mixin_ripple"
...
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/selector_blue_tv"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="240dp"
            android:singleLine="true"
            android:text="@string/Custom_Time"
...
